--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,2 +1,16 @@
-<h1>Pages#index</h1>
-<p>Find me in app/views/pages/index.html.erb</p>
+<%= render 'pages/nav' %>
+<%= render 'pages/static_image' %>
+
+
+<section style="margin-top: 70px;">
+	<div class="container">
+		<div class="row">
+			<div class="col-md-12 text-center">
+				<h1 class="heavy-font">WE ARE INDUSTRY EXPERTS</h1>
+				<h3>Ready to disrupt? We'll partner with you to measurably impact your industry through technology.</h3>
+			</div>
+		</div>
+	</div>
+</section>
+
+<%= render 'pages/footer' %>
