font-awesome added, added all pages to pages controller

--- a/app/views/pages/_footer.html.erb
+++ b/app/views/pages/_footer.html.erb
@@ -1,9 +1,40 @@
-<footer style="background-color: #30373b;">
-
+<section style="background-color: #007b89; margin-top: 100px;">
 	<div class="container">
 		<div class="row">
-			<div class="col-md-4">
+			<div class="col-md-12 text-center">
+				<h3>WANNA GET NERDY?</h3>
+			</div>
+		</div>
+	</div>
+</section>
+
+<footer style="background-color: #30373b;">
+	<div class="container">
+		<div class="row">
+			<div class="col-md-4" style="color: #fff;">
 				<h3>The Nerdy Shop</h3>
+				<p>At our core are innovative and pragmatic Nerds, passionate (if not obsessed – in a good way) about solving your complex business problems.</p>
+				<p>(877) 664.6373</p>
+			</div>
+			<div class="col-md-2" style="color: #fff;">
+				<h3>We Write</h3>
+				<p>Blog Post Title</p>
+				<p>Blog Post Title</p>
+				<p>Blog Post Title</p>
+			</div>
+			<div class="col-md-2" style="color: #fff;">
+				<h3>We Socialize</h3>
+				<p>Facebook</p>
+				<p>Twitter</p>
+				<p>Instagram</p>
+			</div>
+			<div class="col-md-4" style="color: #fff;">
+				<h3>Explore</h3>
+				<p>Who We Are</p>
+				<p>What We Do</p>
+				<p>Turn-Key Solutions</p>
+				<p>Blog</p>
+				<p>Careers</p>
 			</div>
 		</div>
 	</div>
