--- a/app/views/pages/_nav.html.erb
+++ b/app/views/pages/_nav.html.erb
@@ -13,9 +13,10 @@
         
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li><%= link_to "WHO WE ARE", '#' %></li>
-        <li><%= link_to "WHAT WE DO", '#' %></li>
-        <li><%= link_to "TURN-KEY SOLUTIONS", '#' %></li>
+        <li><%= link_to "127.0.0.1", root_path %></li>
+        <li><%= link_to "WHO WE ARE", who_we_are_path %></li>
+        <li><%= link_to "WHAT WE DO", what_we_do_path %></li>
+        <li><%= link_to "TURN-KEY SOLUTIONS", turn_key_solutions_path %></li>
       </ul>
     </div><!--/.nav-collapse -->
   </div>
