--- a/app/views/pages/_static_image.html.erb
+++ b/app/views/pages/_static_image.html.erb
@@ -1,11 +1,11 @@
 <div class="wide">
   	<div class="col-xs-1"></div>
     <div class="col-xs-10 logo">
-    	<div style="margin-top: 10%;">
+    	<div style="margin-top: 20%;">
     		<h1 class="custom-font">Launching Startups Made Easy</h1>
     		<h3 class="custom-font-2">Yes, we'll help turn your idea into a software.</h3>
     		<br>
-    		<%= link_to "Get Nerdy Now", '#', class: "btn btn-success btn-lg" %>
+    		<%= link_to "Get Nerdy Now", '#', class: "btn btn-success btn-lg", style: "margin-top: 57px;" %>
     	</div>
     </div>
     <div class="col-xs-1"></div>
