--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -6,8 +6,19 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12 text-center">
-				<h1 class="heavy-font">WE ARE INDUSTRY EXPERTS</h1>
-				<h3>Ready to disrupt? We'll partner with you to measurably impact your industry through technology.</h3>
+				<h2 class="heavy-font">WE ARE INDUSTRY EXPERTS</h2>
+				<h4>Ready to disrupt? We'll partner with you to measurably impact your industry through technology.</h4>
+			</div>
+		</div>
+	</div>
+</section>
+
+<section style="background: #32343a; color: #fff;">
+	<div class="container">
+		<div class="row">
+			<div class="col-md-12 text-center">
+				<h2 class="heavy-font">WE ARE INDUSTRY EXPERTS</h2>
+				<h4>Yes, it's true! We do turn coffee and pizza into code!</h4>
 			</div>
 		</div>
 	</div>
