--- a/app/views/pages/crowdfunding_website.html.erb
+++ b/app/views/pages/crowdfunding_website.html.erb
@@ -1,1 +1,48 @@
-crowdfunding_website.html.erb
+<%= render 'pages/nav' %>
+
+<div class="wide">
+  	<div class="col-xs-1"></div>
+    <div class="col-xs-10 logo">
+    	<div style="margin-top: 20%;">
+    		<h1 class="custom-font">Start Your Own Kickstarter</h1>
+    		<h3 class="custom-font-2">You don't need to know technology. That's why you have us.</h3>
+    		<br>
+    		<%= link_to "Get Nerdy Now", '#', class: "btn btn-success btn-lg", style: "margin-top: 57px;" %>
+    	</div>
+    </div>
+    <div class="col-xs-1"></div>
+</div>
+
+
+<section style="margin-top: 70px;">
+	<div class="container">
+		<div class="row">
+			<div class="col-md-6">
+				<h3 class="custom-font">What's included</h3>
+				<ul>
+					<li><h4>Add Categories</h4></li>
+					<li><h4>Add Products</h4></li>
+					<li><h4>Online Ordering</h4></li>
+					<li><h4>Online Payments</h4></li>
+					<li><h4>User Registration</h4></li>
+					<li><h4>Sales Analytics</h4></li>
+					<li><h4>Admin Dashboard</h4></li>
+					<li><h4>SMS Notifications</h4></li>
+					<li><h4>Email Notifications</h4></li>
+					<li><h4>Delivery Dispatch Center</h4></li>
+					<li><h4>Merchant Signup</h4></li>
+				</ul>
+			</div>
+			<div class="col-md-6">
+				<div class="panel panel-success">
+				  <div class="panel-body">
+				    <h4 class="custom-font">$295/mo + $395 setup fee</h4>
+				  </div>
+				</div>
+			</div>
+		</div><!-- end row -->
+	</div>
+</section>
+
+
+<%= render 'pages/footer' %>
