--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,17 +1,29 @@
-<h2>Sign up</h2>
+<%= render 'pages/nav' %>
 
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= f.error_notification %>
 
-  <div class="form-inputs">
-    <%= f.input :email, required: true, autofocus: true %>
-    <%= f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length) %>
-    <%= f.input :password_confirmation, required: true %>
-  </div>
+<div class="container" style="margin-top: 70px;">
+	<div class="row">
+		<div class="col-md-4 col-md-offset-4">
+			<div class="panel panel-default">
+			  <div class="panel-heading">
+			    <h3 class="panel-title">Yes! It's NERDY TIME!</h3>
+			  </div>
+			  <div class="panel-body">
+			  	<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+				  <%= f.error_notification %>
 
-  <div class="form-actions">
-    <%= f.button :submit, "Sign up" %>
-  </div>
-<% end %>
+				  <div class="form-group">
+				    <%= f.input :email, required: true, autofocus: true, class: "form-control" %>
+				    <%= f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length), class: "form-control" %>
+				    <%= f.input :password_confirmation, required: true, class: "form-control" %>
+				  </div>
 
-<%= render "users/shared/links" %>
+				    <%= f.button :submit, "Sign up", class: "btn btn-success" %>
+
+				<% end %>
+			  </div>
+			  <div class="panel-footer"><%= render "users/shared/links" %></div>
+			</div><!-- end panel panel-default -->
+		</div>
+	</div>
+</div>
