carrierwave added, CKEditor added

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -5,9 +5,11 @@
   <%= @post.title %>
 </p>
 
+<%= image_tag(@post.bimage.large.url) %>
+
 <p>
   <strong>Body:</strong>
-  <%= @post.body %>
+  <%= raw(@post.body) %>
 </p>
 
 <%= link_to 'Edit', edit_post_path(@post) %> |
