friendly_id added to posts, metatag gem added

--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -6,6 +6,7 @@
     <%= f.label "Upload Post Image" %>
     <%= f.file_field :bimage, required: true, class: "form-control" %><br>
     <%= f.input :body, :as => :ckeditor, :input_html => { :ckeditor => {:toolbar => 'Full'} } %>
+    <%= f.input :keywords, autofocus: true, required: true, class: "form-control" %>
   </div>
 
   <div class="form-actions">
