--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,7 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <link href="https://fonts.googleapis.com/css?family=Poppins:400,700" rel="stylesheet">
   <%= csrf_meta_tags %>
+  <%= display_meta_tags %>
 </head>
 <body>
 
