--- a/app/views/pages/_nav.html.erb
+++ b/app/views/pages/_nav.html.erb
@@ -1,28 +1,114 @@
-<div class="navbar navbar-white navbar-fixed-top">
-  <div class="container">
+<div class="container">
+  <div class="row">
+    <div class="col-md-4 col-md-offset-4">
+        <%= link_to root_path, class: "img-responsive" do %>
+          <%= image_tag "http://res.cloudinary.com/manoylo/image/upload/v1468881745/logo_q9ih9t.png", class: "img-responsive" %>
+        <% end %>
+    </div>
+  </div>
+  <nav class="navbar navbar-default">
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+      <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".js-navbar-collapse">
+        <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">The Nerdy Shop</a>
+
     </div>
-    <div class="collapse navbar-collapse">
+
+
+    <div class="collapse navbar-collapse js-navbar-collapse">
       <ul class="nav navbar-nav">
-        
-      </ul>
-      <ul class="nav navbar-nav navbar-right">
-        <li><%= link_to "HOME", root_path %></li>
-        <li><%= link_to "WHO WE ARE", who_we_are_path %></li>
-        <li><%= link_to "WHAT WE DO", what_we_do_path %></li>
-        <li><%= link_to "TURN-KEY SOLUTIONS", turn_key_solutions_path %></li>
-        <li>
-          <p class="navbar-btn">
-            <%= link_to "GET NERDY", new_user_registration_path, class: "btn btn-success" %>
-          </p>
+        <li class="dropdown mega-dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Menu <i class="fa fa-bars" aria-hidden="true"></i></a>
+
+          <ul class="dropdown-menu mega-dropdown-menu row">
+            <li class="col-sm-3">
+              <ul>
+                <li class="dropdown-header">New in Stores</li>
+                <div id="myCarousel" class="carousel slide" data-ride="carousel">
+                  <div class="carousel-inner">
+                    <div class="item active">
+                      <a href="#"><img src="http://placehold.it/254x150/3498db/f5f5f5/&text=New+Collection" class="img-responsive" alt="product 1"></a>
+                      <h4><small>Summer dress floral prints</small></h4>
+                      <button class="btn btn-primary" type="button">49,99 €</button>
+                      <button href="#" class="btn btn-default" type="button"><span class="glyphicon glyphicon-heart"></span> Add to Wishlist</button>
+                    </div>
+                    <!-- End Item -->
+                    <div class="item">
+                      <a href="#"><img src="http://placehold.it/254x150/ef5e55/f5f5f5/&text=New+Collection" class="img-responsive" alt="product 2"></a>
+                      <h4><small>Gold sandals with shiny touch</small></h4>
+                      <button class="btn btn-primary" type="button">9,99 €</button>
+                      <button href="#" class="btn btn-default" type="button"><span class="glyphicon glyphicon-heart"></span> Add to Wishlist</button>
+                    </div>
+                    <!-- End Item -->
+                    <div class="item">
+                      <a href="#"><img src="http://placehold.it/254x150/2ecc71/f5f5f5/&text=New+Collection" class="img-responsive" alt="product 3"></a>
+                      <h4><small>Denin jacket stamped</small></h4>
+                      <button class="btn btn-primary" type="button">49,99 €</button>
+                      <button href="#" class="btn btn-default" type="button"><span class="glyphicon glyphicon-heart"></span> Add to Wishlist</button>
+                    </div>
+                    <!-- End Item -->
+                  </div>
+                  <!-- End Carousel Inner -->
+                </div>
+                <!-- /.carousel -->
+                <li class="divider"></li>
+                <li><a href="#">View all Collection <span class="glyphicon glyphicon-chevron-right pull-right"></span></a></li>
+              </ul>
+            </li>
+            <li class="col-sm-3">
+              <ul>
+                <li class="dropdown-header">Dresses</li>
+                <li><a href="#">Unique Features</a></li>
+                <li><a href="#">Image Responsive</a></li>
+                <li><a href="#">Auto Carousel</a></li>
+                <li><a href="#">Newsletter Form</a></li>
+                <li><a href="#">Four columns</a></li>
+                <li class="divider"></li>
+                <li class="dropdown-header">Tops</li>
+                <li><a href="#">Good Typography</a></li>
+              </ul>
+            </li>
+            <li class="col-sm-3">
+              <ul>
+                <li class="dropdown-header">Jackets</li>
+                <li><a href="#">Easy to customize</a></li>
+                <li><a href="#">Glyphicons</a></li>
+                <li><a href="#">Pull Right Elements</a></li>
+                <li class="divider"></li>
+                <li class="dropdown-header">Pants</li>
+                <li><a href="#">Coloured Headers</a></li>
+                <li><a href="#">Primary Buttons & Default</a></li>
+                <li><a href="#">Calls to action</a></li>
+              </ul>
+            </li>
+            <li class="col-sm-3">
+              <ul>
+                <li class="dropdown-header">Accessories</li>
+                <li><a href="#">Default Navbar</a></li>
+                <li><a href="#">Lovely Fonts</a></li>
+                <li><a href="#">Responsive Dropdown </a></li>
+                <li class="divider"></li>
+                <li class="dropdown-header">Newsletter</li>
+                <form class="form" role="form">
+                  <div class="form-group">
+                    <label class="sr-only" for="email">Email address</label>
+                    <input type="email" class="form-control" id="email" placeholder="Enter email">
+                  </div>
+                  <button type="submit" class="btn btn-primary btn-block">Sign in</button>
+                </form>
+              </ul>
+            </li>
+          </ul>
+
         </li>
       </ul>
-    </div><!--/.nav-collapse -->
-  </div>
+
+    </div>
+    <!-- /.nav-collapse -->
+  </nav>
 </div>
+
+<h1 class="c-text"> Bootstrap Mega Menu </h1>
